<resources>
    <string name="app_name">hw7m3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="actions">Actions</string>
    <string name="profile">Profile</string>
    <string name="title">Title</string>
    <string name="september_1">September 1</string>
    <string name="_1h">1h</string>
    <string name="following">Following</string>
    <string name="nickname_profile">jacob_w</string>
    <string name="posts_count">54</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="followers_count">834</string>
    <string name="following_count">162</string>
    <string name="jacob_west">Jacob West</string>
    <string name="edit_profile">Edit Profile</string>
</resources>